fixed overflow

--- a/portfolio/styles/globals.css
+++ b/portfolio/styles/globals.css
@@ -13,6 +13,8 @@ body,
   height: 100%;
   background-color: #03001C;
   font-family: 'Orbitron', sans-serif;
+  width: 100vw;
+  overflow-x: hidden;
   letter-spacing: 2px;
   @apply text-white;
 }
